# thalora-web-browser

./: .boa_history  .dockerignore  .gitignore  .gitmodules  2025-09-13-caveat-the-messages-below-were-generated-by-the-u.txt  2025-09-20-this-session-is-being-continued-from-a-previous-co.txt  2025-09-22-homenightnessdevbrainwires-studiorustthalor.txt  2025-09-28-caveat-the-messages-below-were-generated-by-the-u.txt  2025-09-30-caveat-the-messages-below-were-generated-by-the-u.txt  BROWSER_TESTING_GUIDE.md  CHANGELOG.md  CHROME_COMPATIBILITY_GAPS.md  CLAUDE.md  COMPATIBILITY_AUDIT.md  COMPILATION_FIXES_2025-10-24.md  Cargo.toml  DISPATCHEVENT_FIX_SUMMARY.md  Dockerfile  ENVIRONMENT_VARIABLES.md  FEATURES.md  FINAL_STATUS.md  Features.md  ISSUES.md  LICENSE  PHASE_3_COMPLETE.md  README.md  README_VFS.md  REFACTORING-SUMMARY.md  REFACTORING_PROGRESS.md  ROADMAP_SUMMARY.md  RUST_2024_MIGRATION_PLAN.md  SECURITY_AUDIT_FINDINGS.md  SECURITY_AUDIT_RESULTS.md.md  SECURITY_FIXES_COMPLETE.md  SECURITY_REMEDIATION_SUMMARY.md  TEST_AUDIT.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_QUICK_REFERENCE.md  TEST_RESULTS_2025-10-24.md  TODO.md  (+70 more)
.cargo/: config.toml
engines/thalora-browser-apis/: 2025-10-01-run-all-thalora-tests-with-the-v8-engine-and-witho.txt  CHROME_COMPATIBILITY.md  Cargo.toml  ES2023-2025_FEATURES.md  PORTING_STATUS.md  README.md  STATUS.md  extract_apis.sh  extract_inline_tests.py  fix_all_lifetime_patterns.py  fix_all_lifetimes.py  fix_all_remaining_imports.py  fix_all_remaining_lifetimes.py  fix_character_data_match.py  fix_character_data_remaining.py  fix_document_lifetimes.sh  fix_from_errors.py  fix_history_bulk.sh  fix_imports.sh  fix_imports_v2.sh  fix_imports_v3.sh  fix_imports_v4.sh  fix_imports_v5.sh  fix_lifetime_errors.py  fix_lifetimes.py  fix_lifetimes_comprehensive.py  fix_match_pattern.py  fix_node_lifetimes.py  fix_remaining_lifetimes.sh  fix_simple_getters.py  move_browser_apis_from_boa.sh  move_tests.sh  remove_test_declarations.sh  remove_test_mod_declarations.py
engines/thalora-browser-apis/src/: csp.rs  debug_utils.rs  http_blocking.rs  http_module_loader.rs  layout_registry.rs  lib.rs  realm_ext.rs
engines/thalora-browser-apis/src/audio/: audio_context.rs  audio_context_wasm.rs  html_audio_element.rs  html_audio_element_wasm.rs  mod.rs  tests.rs
engines/thalora-browser-apis/src/audit/: mod.rs
engines/thalora-browser-apis/src/browser/: clipboard.rs  cssom.rs  focus_manager.rs  frame_selection.rs  history.rs  keyboard_dispatcher.rs  location.rs  mod.rs  navigation_bridge.rs  notification.rs  performance.rs  performance_old.rs  permissions.rs  selection.rs  tests.rs  vibration.rs  window.rs  window_registry.rs
engines/thalora-browser-apis/src/canvas/: canvas_state.rs  canvas_text.rs  html_canvas_element.rs  mod.rs  offscreen_canvas.rs  path.rs  rendering_context_2d.rs  tests.rs  text_renderer.rs
engines/thalora-browser-apis/src/console/: console.rs  mod.rs  tests.rs
engines/thalora-browser-apis/src/crypto/: crypto.rs  crypto_key.rs  mod.rs  subtle_crypto.rs  tests.rs
engines/thalora-browser-apis/src/css_transform/: matrix4.rs  mod.rs  transform_parser.rs
engines/thalora-browser-apis/src/dom/: character_data.rs  comment.rs  document.rs  document_fragment.rs  document_parse.rs  document_tests.rs  dom_additional_tests.rs  dom_parser.rs  element.rs  element_tests.rs  html_details_element.rs  html_dialog_element.rs  html_element.rs  html_iframe_element.rs  html_image_element.rs  html_image_element_wasm.rs  html_script_element.rs  image_bitmap.rs  mod.rs  range.rs  selection.rs  text.rs
engines/thalora-browser-apis/src/events/: abort_signal.rs  close_event.rs  custom_event.rs  error_event.rs  event.rs  event_target.rs  fetch_event.rs  hash_change_event.rs  message_event.rs  mod.rs  pageswap_event.rs  pointer_event.rs  pop_state_event.rs  progress_event.rs  propagation.rs  tests.rs  touch_event.rs  ui_events.rs
engines/thalora-browser-apis/src/fetch/: event_source.rs  event_source_wasm.rs  fetch.rs  fetch_wasm.rs  mod.rs  sw_fetch_intercept.rs  tests.rs  websocket.rs  websocket_stream.rs  websocket_wasm.rs  xmlhttprequest.rs  xmlhttprequest_wasm.rs
engines/thalora-browser-apis/src/file/: blob.rs  file.rs  file_reader.rs  mod.rs  tests.rs
engines/thalora-browser-apis/src/intl/: mod.rs  tests.rs
engines/thalora-browser-apis/src/locks/: lock.rs  lock_info.rs  lock_manager.rs  mod.rs  tests.rs
engines/thalora-browser-apis/src/messaging/: broadcast_channel.rs  message_channel.rs  message_port.rs  mod.rs  tests.rs
engines/thalora-browser-apis/src/misc/: abort_controller.rs  css.rs  encoding.rs  form.rs  form_data.rs  mod.rs  structured_clone.rs  tests.rs  url.rs
engines/thalora-browser-apis/src/observers/: intersection_observer.rs  mod.rs  mutation_observer.rs  performance_observer.rs  resize_observer.rs  tests.rs
engines/thalora-browser-apis/src/storage/: cookie_store.rs  mod.rs  tests.rs
engines/thalora-browser-apis/src/streams/: mod.rs  queuing_strategy.rs  readable_stream.rs  readable_stream_reader.rs  tests.rs  transform_stream.rs  writable_stream.rs
engines/thalora-browser-apis/src/timers/: mod.rs  tests.rs  timers.rs
engines/thalora-browser-apis/src/video/: html_video_element.rs  html_video_element_wasm.rs  mod.rs  tests.rs
engines/thalora-browser-apis/src/web_components/: custom_element_registry.rs  html_template_element.rs  mod.rs  tests.rs
engines/thalora-browser-apis/src/webgl/: buffer.rs  constants.rs  constants2.rs  context.rs  context2.rs  context2_wasm.rs  context_wasm.rs  methods2_query.rs  methods2_transform.rs  methods2_vao.rs  methods_buffer.rs  methods_draw.rs  methods_shader.rs  methods_texture.rs  methods_uniform.rs  mod.rs  shader.rs  state.rs  tests.rs  texture.rs  webgl2_rendering_context.rs  (+1 more)
engines/thalora-browser-apis/tests/: lib_tests.rs
engines/thalora-browser-apis/tools/: web_api_audit.rs
engines/v8/: Cargo.toml  README.md  README_CUSTOM_FORK.md  build.rs
engines/v8/src/: context.rs  engine.rs  lib.rs  polyfills.rs  polyfills_old.rs  runtime.rs
vfs/: Cargo.toml
vfs/src/: lib.rs  tests.rs
(+1258 files in other folders)
