[workspace]
resolver = "2"
members = [
    "engines/thalora-browser-apis",
    "vfs",
    "shared/thalora-constants",
    "xtask",
]
# engines/boa is a self-contained workspace fork — keep it excluded so its own
# [workspace] section and workspace.dependencies remain intact.
exclude = ["engines/boa"]

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[package]
name = "thalora"
version = "0.2.0"
edition = "2024"
description = "Pure Rust headless browser for AI models - fast, secure web content extraction with MCP integration"
authors = ["Brainwires Team"]
license = "MIT"
repository = "https://github.com/brainwires/thalora"
keywords = ["headless-browser", "ai", "mcp", "web-scraping", "rust"]
categories = ["web-programming", "parsing"]

[lib]
crate-type = ["cdylib", "rlib"]

# Configure getrandom for WASM builds - need both 0.2.x and 0.3.x versions
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dependencies]
# Shared constants
thalora-constants = { path = "shared/thalora-constants" }

# MCP protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime (native only)
tokio = { version = "1", features = ["full"], optional = true }

# HTTP client (native only)
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots", "gzip", "brotli", "deflate", "cookies", "http2", "stream", "multipart", "blocking"], default-features = false, optional = true }

# HTML parsing
scraper = "0.24"
html5ever = "0.27"
kuchikiki = "0.8"

# CSS parsing and layout
lightningcss = "1.0.0-alpha.67"
taffy = "0.5"
cosmic-text = "0.14"

# Browser APIs - extracted from Boa engine for modular architecture
thalora-browser-apis = { path = "engines/thalora-browser-apis", default-features = false }

# Boa engine - required for macros like js_string!
boa_engine = { path = "engines/boa/core/engine", default-features = false }

# Async trait support for engine abstraction
async-trait = "0.1"

# WebAssembly runtime - Full V8-compatible stack (native only - can't run wasmtime inside WASM)
wasmtime = { version = "21.0", features = ["component-model", "async", "runtime", "cranelift", "cache", "pooling-allocator"], optional = true }
wasmtime-wasi = { version = "21.0", optional = true }
wasmtime-wast = { version = "21.0", optional = true }
wat = { version = "1.0", optional = true }
wasmparser = { version = "0.121", optional = true }
wasm-encoder = { version = "0.38", optional = true }
wasmprinter = { version = "0.2", optional = true }

# Geolocation services (native only)
sysinfo = { version = "0.31", optional = true }
# ipgeolocate removed - was unused and its reqwest 0.11 default-tls conflicted with BoringSSL from rquest

# WebRTC implementation (native only) — Brainwires fork with 95%+ W3C compliance
webrtc = { git = "https://github.com/Brainwires/webrtc-rs", optional = true }

# Audio/Media processing (native only)
cpal = { version = "0.15", optional = true }
hound = { version = "3.5", optional = true }
symphonia = { version = "0.5", features = ["all"], optional = true }
rodio = { version = "0.19", optional = true }

# Image processing
image = { version = "0.25", features = ["png", "jpeg", "gif", "webp", "bmp", "ico", "tiff"] }

# 2D Graphics rendering (Phase 3: Canvas)
tiny-skia = "0.11"
fontdb = "0.16"
rustybuzz = "0.12"

# Video processing
ffmpeg-next = { version = "7.0", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL handling
url = "2.5"

# Random number generation for human-like behavior
rand = "0.8"

# Concurrency-friendly mutexes and synchronization primitives
parking_lot = "0.12"

# URL decoding helper used by scraping utilities
urlencoding = "2.1"

# Async utilities
futures = "0.3"

# STDIO handling (native only)
tokio-util = { version = "0.7", features = ["codec"], optional = true }

# Command line argument parsing (native only)
clap = { version = "4.0", features = ["derive"], optional = true }

# Regex for JavaScript processing
regex = "1.10"

# HTML escaping
html-escape = "0.2"

# UUID generation for WebSocket connections
uuid = { version = "1.0", features = ["v4", "js"] }

# WebSocket implementation (native only)
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"], optional = true }
tungstenite = { version = "0.20", optional = true }
futures-util = "0.3"

# Service Worker implementation (extends existing tokio features)

# Cryptography - AES-256-GCM encryption for credentials + SRI hash verification
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
sha2 = "0.11"
digest = "0.11"
base64 = "0.22"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# Cookie management - shared cookie store for reqwest (native only)
reqwest_cookie_store = { version = "0.9", optional = true }

# IP address parsing and validation for SSRF prevention
ipnetwork = "0.20"

# MCP protocol — official Rust SDK (stdio + Streamable HTTP transports)
rmcp = { version = "1.3.0", features = [
    "server",
    "macros",
    "transport-io",
    "local",          # relaxes ServerHandler: Send+Sync → Sized+'static for !Send Boa engine
], optional = true }

# HTTP server layer for /health endpoint + MCP HTTP transport
axum = { version = "0.8", optional = true }

# CDP (Chrome DevTools Protocol) support
chrono = { version = "0.4", features = ["serde"] }

# AI Memory Heap for persistent storage
dirs = { version = "5.0", optional = true }
vfs = { path = "vfs", default-features = false }

# ============ WASM-only dependencies ============
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

web-sys = { version = "0.3", features = [
    "console",
    "Window", "Document", "Element", "Event", "EventTarget",
    "Request", "RequestInit", "RequestMode", "Response", "Headers", "Blob",
    "WebSocket", "MessageEvent", "CloseEvent",
    "Storage",
    "IdbFactory", "IdbDatabase", "IdbTransaction", "IdbObjectStore", "IdbRequest",
    "AudioContext", "GainNode", "AudioBufferSourceNode",
    "HtmlVideoElement", "HtmlAudioElement", "MediaStream",
    "RtcPeerConnection", "RtcDataChannel", "RtcSessionDescription",
    "Navigator", "Geolocation", "Clipboard",
    "HtmlCanvasElement", "CanvasRenderingContext2d",
    "Performance", "Crypto", "SubtleCrypto",
], optional = true }

[[bin]]
name = "thalora"
path = "src/main.rs"
required-features = ["_bin"]

[features]
default = ["desktop"]

# Internal feature for binary builds (gates clap + tokio-util)
_bin = ["dep:clap", "dep:tokio-util"]

# Streamable HTTP MCP transport via rmcp + axum /health endpoint
http-transport = ["dep:rmcp", "dep:axum"]

# Core networking and browser engine — enables FFI, protocols, web search
core = [
    "dep:tokio",
    "dep:reqwest",
    "dep:reqwest_cookie_store",
    "dep:tokio-tungstenite",
    "dep:tungstenite",
    "dep:dirs",
    # Enable native features in sub-crates
    "thalora-browser-apis/native",
    "boa_engine/native",
]

# Desktop build — MCP server binary + FFI library for .NET GUI
desktop = ["core", "_bin", "http-transport"]

# Full native build — all platform-specific dependencies (may require ffmpeg)
native = [
    "desktop",
    "dep:cpal",
    "dep:hound",
    "dep:symphonia",
    "dep:rodio",
    "dep:ffmpeg-next",
    "dep:webrtc",
    "dep:sysinfo",
    "dep:wasmtime",
    "dep:wasmtime-wasi",
    "dep:wasmtime-wast",
    "dep:wat",
    "dep:wasmparser",
    "dep:wasm-encoder",
]

# WASM build - uses web-sys for browser API delegation
wasm = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "dep:serde-wasm-bindgen",
    "dep:console_error_panic_hook",
    # Enable wasm features in sub-crates
    "thalora-browser-apis/wasm",
    "boa_engine/wasm",
]

# WASM debugging MCP tools (extends desktop — no ffmpeg needed)
wasm-debug = ["desktop", "dep:wasmprinter"]

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.24.0"
tokio-test = "0.4"
wiremock = "0.6"

[lints]
workspace = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory"]

# Resolver to handle dependency conflicts
[package.metadata.docs.rs]
all-features = true
