[package]
name = "vfs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
# By default use an in-memory virtual filesystem. Enable `real_fs` to delegate to `std::fs`.
default = []
real_fs = []

[dependencies]
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
uuid = { version = "1.4", features = ["v4"] }
